# atmo-fr-mcp

./: .clever.json  .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/adapters/: atmo_api.rs  geo_api.rs  mod.rs
src/config/: config.rs
src/model/: atmo.rs  geo.rs  mod.rs
src/tools/: air_quality.rs  mod.rs
