[package]
name = "atmo-fr-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenvy = "0.15.7"
envy = "0.4.2"
reqwest = { version = "0.12.23", features = ["json"] }
rmcp = { version = "0.6.0", features = ["server", "schemars"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
